--- a/zapier/package.json
+++ b/zapier/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "untitled-application",
+  "name": "avo-action-repro",
   "version": "1.0.0",
-  "description": "Integrate Zapier with Untitled Application",
+  "description": "Integrate Zapier with Avo Action Repro",
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive -t 10000"
